crates/compiler/tests/parse_errors/unicode_bad.elm
module Main exposing (..)

x = "\u{zz}"
